--- a/Android/ToDoList/app/src/main/AndroidManifest.xml
+++ b/Android/ToDoList/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ToDoList"
         tools:targetApi="34">
         <activity
-            android:name=".MainActivity"
+            android:name=".features.task.presentation.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.ToDoList">
             <intent-filter>
