--- a/Android/ToDoList/app/src/main/AndroidManifest.xml
+++ b/Android/ToDoList/app/src/main/AndroidManifest.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.yusufnasserdev.todolist">
 
     <application
         android:name=".TodoApp"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ToDoList"
-        tools:targetApi="34">
+        android:theme="@style/Theme.ToDoList">
         <activity
             android:name=".features.task.presentation.MainActivity"
             android:exported="true"
+            android:label="@string/app_name"
             android:theme="@style/Theme.ToDoList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
