--- a/Android/ToDoList/settings.gradle
+++ b/Android/ToDoList/settings.gradle
@@ -1,19 +1,10 @@
-pluginManagement {
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-}
-
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        gradlePluginPortal()
+        jcenter() // Warning: this repository is going to shut down soon
     }
 }
-
 rootProject.name = "ToDoList"
-include(":app")
+include ':app'
